css/style.css
/* Dark Blue #2e368f
Light Blue #29abe2 */
/* Global */
html {
  /* color: #29abe2; */
  color: #eee;
  font-size: 10px;
  max-width: 100%;
  overflow-x: initial;
}
body {
  width: 100%;
  height: 100%;
  max-width: 100%;
  background: url("../images/mainbg.jpg") no-repeat center fixed;
  background-size: cover;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  color: #eee;
}
p {
  font-size: 1.8rem;
  font-weight: 300;
}
img {
  width: 100%;
}
section {
  padding: 4rem 0;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

h1,
h6 {
  color: #ffe838;
}

.container {
  /* background-color: #2e368f; */
  width: 90%;
  max-width: 120rem;
  height: 100%;
  margin: 0 auto;
  position: relative;
  padding: 2rem;
  border-radius: 20px;
}
.section-heading {
  text-align: center;
  margin-bottom: 10rem;
}
.section-heading h1 {
  font-size: 5rem;
  /* color: rgba(255,255,255, .3); */
  text-transform: uppercase;
  font-weight: 300;
  position: relative;
  margin-bottom: 1rem;
}
.section-heading h1::before,
.section-heading h1::after {
  content: "";
  position: absolute;
  bottom: -0.5rem;
  left: 50%;
  transform: translateX(-50%);
  background-color: rgba(255, 255, 255, 0.75);
}
.section-heading h1::before {
  width: 10rem;
  height: 3px;
  border-radius: 0.8rem;
}
.section-heading h1::after {
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  bottom: -1rem;
}
.section-heading h6 {
  font-size: 1.6rem;
  font-weight: 300;
}
.has-margin-right {
  margin-right: 5rem;
}

/* Global END */

/* Header */
header {
  width: 100vw;
  height: 100vh;
  max-width: 100%;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
.top-nav {
  width: 100%;
  height: 100vh;
  max-width: 100%;
  position: fixed;
  top: -100vh;
  background-image: linear-gradient(#2e368f, #29abe2);
  border-radius: 100%;
  transition: all 650ms cubic-bezier(1, 0, 0, 1);
}
.navList {
  width: 100%;
  height: 100%;
  max-width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
li {
  margin: 0 2rem;
}
.nav-link {
  font-size: 5rem;
  padding: 1rem;
}
.fixedNav #navigationBar{
  position: fixed;
  top:0;
  margin:0;
}
#navigationBar{
  width:100%;
  max-width: 100%;
  z-index: 100;
  margin: 0;
}

.nav-link:hover,
.nav-link:focus {
  background: linear-gradient(to right, #ffe838, #2e368f);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.top-nav.open {
  top: 0;
  border-radius: initial;
  z-index: 100;
}

.menu-toggler {
  position: absolute;
  top: 5rem;
  right: 5rem;
  width: 5rem;
  height: 4rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  cursor: pointer;
  z-index: 1500;
  transition: transform 650ms ease-out;
}

.menu-toggler.open {
  transform: rotate(-45deg);
}

.bar {
  background: linear-gradient(to right, #ffe838, #fff);
  width: 100%;
  height: 4px;
  border-radius: 0.8rem;
}

.bar.half {
  width: 50%;
}

.bar.start {
  transform-origin: right;
  transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
}

.open .bar.start {
  transform: rotate(-450deg) translateX(0.8rem);
}

.bar.end {
  align-self: flex-end;
  transform-origin: left;
  transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
}

.open .bar.end {
  transform: rotate(-450deg) translateX(-0.8rem);
}

.landing-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  text-align: center;
  z-index: 1;
}

.landing-text h1 {
  font-size: 14em;
  font-family: "Lobster", serif;
  background: linear-gradient(to top, #ffe838, #fff);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  padding: 1rem;
}

.landing-text h6 {
  font-size: 3rem;
  font-weight: 300;
  color: #ffe838;
}
/* Parallax Start */
.paralliam{
  position: absolute;
  width: 650px;
  bottom: -250px;
  right: -70px;
  z-index: -1;
}
/* Parallax END */


/* Header END */

/* About Section */
.about{
  margin-top: 10rem;
}
.about .container {
  display: grid;
  align-items: center;
  justify-content: center;
  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
  /* grid-gap: 1rem; */
}

.about-heading {
  text-align: center;
  text-transform: uppercase;
  line-height-step: 0;
  margin-bottom: 6rem;
}
.about p {
  padding: 2rem;
}
/* 
.profile-img{
    flex:1;
    margin-right:5rem;
} */
/* profile card flex: 1; margin-right: 5rem */

.about-details {
  flex: 1;
}

.about-heading h1 {
  font-size: 10rem;
  /* opacity: .3; */
}
/* .about-heading h6{
    font-size: 2rem;
    font-weight: 300;
} */

/* About END */

/* Services */
.skills {
  margin-top: 10rem;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
  grid-gap: 2rem;
  text-align: center;
}

.skill {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 2rem;
}
.skill h1 {
  text-transform: uppercase;
  letter-spacing: 2px;
  margin: 2rem -2px 2rem 0;
}

.icon-container {
  width: 10rem;
  height: 10rem;
  border: 3px solid #ffe838;
  background-color: #29abe2;
  margin-bottom: 2rem;
  display: flex;
  transform: rotate(45deg);
}

.icon-container i {
  color: #ffe838;
  font-size: 5rem;
  margin: auto;
  transform: rotate(-45deg);
}

/* Services END */

/* Portfolio */
.portfolio-item {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 5rem;
  /* box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); */
  /* border-radius: 25px; */
}

.portfolio-item:last-child {
  margin-bottom: 0;
}
.portfolio-img {
  flex: 1;
  width: 50rem;
}
.portfolio-description {
  flex: 1;
}
.portfolio-description h1 {
  font-size: 3rem;
  font-weight: 300;
  margin: 1rem 0;
}

.portfolio-description h6 {
  font-size: 1.5rem;
  text-transform: uppercase;
  font-weight: 300;
  /* opacity: 0.3; */
}
/* ... */

